@startuml
'https://plantuml.com/class-diagram

class HeroAircraft {
    - {static} heroAircraft:HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + increaseHp(int increase):void
    + {static} getSingleton():HeroAircraft
}

abstract class GameTemplate {
}

GameTemplate ..> HeroAircraft
HeroAircraft <.. HeroAircraft

@enduml